
  - [R5RS] Fix improper list acceptance on single-arg map

  - [R5RS] Fix improper tail recursion of call-with-values on a corner case

  - [R5RS] Fix broken improper tail handling of 'list-ref'

  - [R5RS] Fix improper list acceptance of 'reverse'

  - [R5RS] Reject invalid number strings such as "0xa" and " 1" on
    'string->number'

  - [R5RS] Reject invalid number literals such as "#x0xa"

  - [SRFI-60] Fix invalid result of (logand). Now it returns -1 as same
    as the reference implementation

  - Fix broken ScmBaseCharPort inheritance of ScmSingleByteCharPort
    which may cause SEGV

  - Add lacking or incomplete error handlings for port operations

  - Fix incomplete singlebyte charater support

  - Fix broken sign extention for 8-bit char on string port read

  - Fix missized-cast of 'quotient' which results a broken value on 64-bit
    configurations

  - Fix broken evaluation of quasiquoted vectors splicing with improper list

  - Fix 64-bit capability of quasiquoted vectors

  - Fix passing circular list into error object when SRFI-38 is not enabled

  - Fix '0' prefix incapability on a maximum-length binary number literal. See
    "R5RS conformance: Numbers: Literals" subsection of doc/spec.txt for
    further details

  - Fix a broken type handling appeares on (equal? macro1 macro2) on
    storage-compact

  - Fix broken procedure invocation appears on a minor build configuration

  - Fix broken body result of %%closure-code when body-length == 1

  - Fix acceptable pathname length of a script name of sscm command previously
    one char lesser than maximum


Overview of changes from 0.5.0 (r3097 + private modifications) to 0.6.1
==
* New features

  - Support R5RS hygienic macros

  - Support format strings (covers SRFI-28 and SRFI-48)

  - Add global symbol exportation control method in portable way (see
    doc/global-obj.txt)

  - Add experimental support for embedded platforms that lack writable static